--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 .App {
   padding: 20px;
+
+}
+.body{
+  background-color:#F8F8FF;
+  height: 100%;
+  margin: auto 10px;
+  width: auto;
+  height: 1000px;
+
 }
